Lesson 18: Using the index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="aula_17_adicioinando-e-removendo-itens-do array/script.js"></script>
+    <script src="aula_18_usando-indice/script.js"></script>
 </body>
 </html>
