--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="aula_21_while/script.js"></script>
+    <script src="aula_22_do-while/script.js"></script>
   </body>
 </html>
