--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="aula_24_for-in/script.js"></script>
+    <script src="aula_25_for-of/script.js"></script>
   </body>
 </html>
