Lesson 28: Getting date and time

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="aula_27_continue/script.js"></script>
+    <script src="aula_28_data-e-hora/script.js"></script>
   </body>
 </html>
