--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="aula_29_definindo-data-e-hora -especifica/script.js"></script>
+    <script src="aula_30_trabalhar-data-e-hora/script.js"></script>
   </body>
 </html>
