--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="aula_34_data-e-hora-toLocaleString/script.js"></script>
+    <script src="aula_35_Intl/script.js"></script>
   </body>
 </html>
